[package]
name = "fluence-fvm-sdk"
description = "Fluence SDK for a FVM actor which provides RandomX syscall"
version = "0.1.0"
authors = ["Fluence Labs"]
edition = "2021"
repository = "https://github.com/fluencelabs/fluence-fvm-sdk"

[lib]
crate-type = ["lib"]

[dependencies]
fvm_shared = "4.1"
fvm_sdk = "4.1"
num-traits = { version = "0.2", default-features = false }
