[workspace]
resolver = "2"
members = [
    "fluence-actor-sdk",
    "fluence-fendermint-syscall",
    "shared"
]

[workspace.dependencies]
fluence-fendermint-shared = { path = "./shared", version = "0.1.1" }

fvm = { version = "4.1.0", default-features = false }
fvm_shared = "4.1.0"
fvm_sdk = "4.1.0"
num-traits = { version = "0.2", default-features = false }

randomx-rust-wrapper = { git = "https://github.com/fluencelabs/capacity-commitment-prover.git", package = "ccp-randomx", branch = "chore/replace-randomx-wrapper"}
