[package]
name = "fluence-fvm-sdk"
version = "0.1.0"
description = "Fluence SDK for a FVM actor which provides RandomX syscall"
authors = ["Fluence Labs"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/fluencelabs/fluence-fendermint/"
publish = true

[lib]
crate-type = ["lib"]

[dependencies]
fvm_shared = "4.1"
fvm_sdk = "4.1"
num-traits = { version = "0.2", default-features = false }
