[package]
name = "fluence-actor-sdk"
version = "0.1.2"
description = "Fluence SDK for a FVM actor which provides RandomX syscall"
authors = ["Fluence Labs"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/fluencelabs/fluence-fendermint/"
publish = true

[lib]
crate-type = ["lib"]

[dependencies]
fluence-fendermint-shared = { workspace = true }

fvm_shared = { workspace = true }
fvm_sdk = { workspace = true }
num-traits = { workspace = true }
