[package]
name = "fluence-fendermint-syscall"
description = "Implementation of RandomX syscall for Fendermint"
authors = ["Fluence Labs"]
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/fluencelabs/fluence-fendermint/"
publish = true

[dependencies]
fluence-fendermint-shared = { path = "../shared", version = "0.1.1" }

fvm = "4.1.0"
fvm_shared = "4.1.0"
randomx-rs = "1.3.0"
