[package]
name = "fluence-fendermint-syscall"
description = "Implementation of RandomX syscall for Fendermint"
authors = ["Fluence Labs"]
version = "0.1.4"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/fluencelabs/fluence-fendermint/"
publish = true

[dependencies]
fluence-fendermint-shared = { workspace = true }

fvm = { workspace = true }
fvm_shared = { workspace = true }
num-traits = { workspace = true }

randomx-rust-wrapper = { workspace = true }
