[package]
name = "fluence-fendermint-syscall"
description = "Implementation of RandomX syscall for Fendermint"
authors = ["Fluence Labs"]
version = "0.1.5"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/fluencelabs/fluence-fendermint/"
publish = true

[dependencies]
fluence-fendermint-shared = { workspace = true }
ccp-randomx = { workspace = true }
ccp-shared = { workspace = true }

fvm = { workspace = true }
fvm_shared = { workspace = true }

rayon = { workspace = true }
num-traits = { workspace = true }
